--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,22 +3,55 @@ name: Deploy
 on: push
 
 jobs:
-#  build-linux:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Build manylinux Python wheels
-#        uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
-#        with:
-#          python-versions: 'cp36-cp36m cp37-cp37m'
-#
-#      - uses: actions/upload-artifact@master
-#        with:
-#          name: linux-wheel
-#          path: dist/*-manylinux*.whl
+  build-linux:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Build manylinux Python wheels
+        uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
+        with:
+          python-versions: 'cp36-cp36m cp37-cp37m'
+
+      - uses: actions/upload-artifact@master
+        with:
+          name: linux-wheel
+          path: dist/*-manylinux*.whl
+  
+  run-tox-test-linux:
+    name: Test planner integration on Ubuntu
+    needs: [build-linux]
+    runs-on: ${{ matrix.version.ubuntu }}
+    strategy:
+      matrix:
+        version:
+          - {ubuntu: ubuntu-20.04, python: '3.8'}
+          - {ubuntu: ubuntu-22.04, python: '3.10'}
+    steps:
+      - uses: actions/download-artifact@master
+        with:
+          name: linux-wheel
+          path: dist
+
+      - name: Clone repository
+        uses: actions/checkout@v3
+
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.version.python }}
+
+      - name: Install dependencies
+        run: |
+          pip3 install tox
+
+      - name: Run basic test 
+        run: |
+          cd misc/
+          PIP_FIND_LINKS='dist' tox -e unified-planning
+
 #
 #  build-win-and-mac:
 #    name: Build wheels on ${{ matrix.os }}
@@ -47,51 +80,51 @@ jobs:
 #          name: windows-mac-wheels
 #          path: dist/*.whl
 
-  build-windows:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-2022]
-    env:
-      CC: cl
-      CXX: cl
-      CIBW_BUILD_VERBOSITY: 3
-
-    steps:
-      - name: Clone UP Fast Downward repository
-        uses: actions/checkout@v3
-
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v3
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.15.0
-
-      - uses: ilammy/msvc-dev-cmd@v1
-
-      - name: Build 64-bit wheel
-        run: python -m cibuildwheel --output-dir dist
-        env:
-          CIBW_BUILD: cp36-win_amd64
-          DISTUTILS_USE_SDK: 1
-          MSSdk: 1
-
-      - uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: x86
-
-      - name: Build 32-bit wheel
-        run: python -m cibuildwheel --output-dir dist
-        env:
-          CIBW_BUILD: cp36-win32
-          DISTUTILS_USE_SDK: 1
-          MSSdk: 1
-
-      - uses: actions/upload-artifact@v3
-        with:
-          name: windows-wheels
-          path: dist/*.whl
+#  build-windows:
+#    name: Build wheels on ${{ matrix.os }}
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        os: [windows-2022]
+#    env:
+#      CC: cl
+#      CXX: cl
+#      CIBW_BUILD_VERBOSITY: 3
+#
+#    steps:
+#      - name: Clone UP Fast Downward repository
+#        uses: actions/checkout@v3
+#
+#      # Used to host cibuildwheel
+#      - uses: actions/setup-python@v3
+#
+#      - name: Install cibuildwheel
+#        run: python -m pip install cibuildwheel==2.15.0
+#
+#      - uses: ilammy/msvc-dev-cmd@v1
+#
+#      - name: Build 64-bit wheel
+#        run: python -m cibuildwheel --output-dir dist
+#        env:
+#          CIBW_BUILD: cp36-win_amd64
+#          DISTUTILS_USE_SDK: 1
+#          MSSdk: 1
+#
+#      - uses: ilammy/msvc-dev-cmd@v1
+#        with:
+#          arch: x86
+#
+#      - name: Build 32-bit wheel
+#        run: python -m cibuildwheel --output-dir dist
+#        env:
+#          CIBW_BUILD: cp36-win32
+#          DISTUTILS_USE_SDK: 1
+#          MSSdk: 1
+#
+#      - uses: actions/upload-artifact@v3
+#        with:
+#          name: windows-wheels
+#          path: dist/*.whl
 
 
 #  deploy-pypi:
