--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,25 +17,103 @@ jobs:
 
       - uses: actions/upload-artifact@master
         with:
-          name: linux-wheel
+          name: linux-wheels
           path: dist/*-manylinux*.whl
+
+
+  build-windows:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: windows-2022
+    env:
+      CC: cl
+      CXX: cl
+#      CIBW_BUILD_VERBOSITY: 3
+
+    steps:
+      - name: Clone UP Fast Downward repository
+        uses: actions/checkout@v3
+
+      # Used to host cibuildwheel
+      - uses: actions/setup-python@v3
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.15.0
+
+      - uses: ilammy/msvc-dev-cmd@v1
+
+      - name: Build 64-bit wheel
+        run: python -m cibuildwheel --output-dir dist
+        env:
+          CIBW_BUILD: cp36-win_amd64
+          DISTUTILS_USE_SDK: 1
+          MSSdk: 1
+
+      - uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x86
+
+      - name: Build 32-bit wheel
+        run: python -m cibuildwheel --output-dir dist
+        env:
+          CIBW_BUILD: cp36-win32
+#          DISTUTILS_USE_SDK: 1
+#          MSSdk: 1
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: windows-wheels
+          path: dist/*.whl
+
+
+  build-mac:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: macOS-11
+    steps:
+      - uses: actions/checkout@v3
+
+      # Used to host cibuildwheel
+      - uses: actions/setup-python@v3
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.11.2
+
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir dist
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: mac-wheels
+          path: dist/*.whl
   
-  run-tox-test-linux:
-    name: Test planner integration on Ubuntu
-    needs: [build-linux]
-    runs-on: ${{ matrix.version.ubuntu }}
+
+  run-tox-test:
+    name: Test wheels
+    needs: [build-linux, build-mac, build-windows]
+    runs-on: ${{ matrix.version.os }}
     strategy:
       matrix:
         version:
-          - {ubuntu: ubuntu-20.04, python: '3.8'}
-          - {ubuntu: ubuntu-22.04, python: '3.10'}
+          - {os: ubuntu-20.04, python: '3.8'}
+          - {os: ubuntu-22.04, python: '3.10'}
+          - {os: macOS-11, python: '3.10'}
+          - {os: windows-2022, python: '3.10'}
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
 
       - uses: actions/download-artifact@master
         with:
-          name: linux-wheel
+          name: linux-wheels
+          path: dist
+
+      - uses: actions/download-artifact@master
+        with:
+          name: mac-wheels
+          path: dist
+
+      - uses: actions/download-artifact@master
+        with:
+          name: windows-wheels
           path: dist
 
       - name: Install Python
@@ -49,85 +127,10 @@ jobs:
 
       - name: Run basic test 
         run: |
-          ls /home/runner/work/up-fast-downward/up-fast-downward
-          ls /home/runner/work/up-fast-downward/up-fast-downward/dist
+
           cd misc/
-          pwd
-          PIP_FIND_LINKS='/home/runner/work/up-fast-downward/up-fast-downward/dist' tox -e unified-planning
-
-#
-#  build-win-and-mac:
-#    name: Build wheels on ${{ matrix.os }}
-#    runs-on: ${{ matrix.os }}
-#    strategy:
-#      matrix:
-#        os: [macOS-11, windows-2022]
-#
-#    steps:
-#      - uses: actions/checkout@v3
-#
-#      # Used to host cibuildwheel
-#      - uses: actions/setup-python@v3
-#
-#      - name: Install cibuildwheel
-#        run: python -m pip install cibuildwheel==2.11.2
-#
-#      - name: Build wheels
-#        run: python -m cibuildwheel --output-dir dist
-#        # to supply options, put them in 'env', like:
-#        # env:
-#        #   CIBW_SOME_OPTION: value
-#
-#      - uses: actions/upload-artifact@v3
-#        with:
-#          name: windows-mac-wheels
-#          path: dist/*.whl
-
-#  build-windows:
-#    name: Build wheels on ${{ matrix.os }}
-#    runs-on: ${{ matrix.os }}
-#    strategy:
-#      matrix:
-#        os: [windows-2022]
-#    env:
-#      CC: cl
-#      CXX: cl
-#      CIBW_BUILD_VERBOSITY: 3
-#
-#    steps:
-#      - name: Clone UP Fast Downward repository
-#        uses: actions/checkout@v3
-#
-#      # Used to host cibuildwheel
-#      - uses: actions/setup-python@v3
-#
-#      - name: Install cibuildwheel
-#        run: python -m pip install cibuildwheel==2.15.0
-#
-#      - uses: ilammy/msvc-dev-cmd@v1
-#
-#      - name: Build 64-bit wheel
-#        run: python -m cibuildwheel --output-dir dist
-#        env:
-#          CIBW_BUILD: cp36-win_amd64
-#          DISTUTILS_USE_SDK: 1
-#          MSSdk: 1
-#
-#      - uses: ilammy/msvc-dev-cmd@v1
-#        with:
-#          arch: x86
-#
-#      - name: Build 32-bit wheel
-#        run: python -m cibuildwheel --output-dir dist
-#        env:
-#          CIBW_BUILD: cp36-win32
-#          DISTUTILS_USE_SDK: 1
-#          MSSdk: 1
-#
-#      - uses: actions/upload-artifact@v3
-#        with:
-#          name: windows-wheels
-#          path: dist/*.whl
+          #          PIP_FIND_LINKS='/home/runner/work/up-fast-downward/up-fast-downward/dist' tox -e unified-planning
+          PIP_FIND_LINKS='${GITHUB_WORKSPACE}/dist' tox -e unified-planning
 
 
 #  deploy-pypi:
@@ -138,12 +141,17 @@ jobs:
 #    steps:
 #      - uses: actions/download-artifact@master
 #        with:
-#          name: linux-wheel
+#          name: linux-wheels
 #          path: dist
 #
 #      - uses: actions/download-artifact@master
 #        with:
-#          name: windows-mac-wheels
+#          name: windows-wheels
+#          path: dist
+#
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: mac-wheels
 #          path: dist
 #
 #      - run: ls dist
