--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
 
   build-windows:
-    name: Build wheels on ${{ matrix.os }}
+    name: Build windows Python wheel
     runs-on: windows-2022
     env:
       CC: cl
@@ -33,7 +33,6 @@ jobs:
       - name: Clone UP Fast Downward repository
         uses: actions/checkout@v3
 
-      # Used to host cibuildwheel
       - uses: actions/setup-python@v3
 
       - name: Install cibuildwheel
@@ -45,46 +44,33 @@ jobs:
         run: python -m cibuildwheel --output-dir dist
         env:
           CIBW_BUILD: cp36-win_amd64
-          DISTUTILS_USE_SDK: 1
-          MSSdk: 1
-
-      - uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: x86
-
-      - name: Build 32-bit wheel
-        run: python -m cibuildwheel --output-dir dist
-        env:
-          CIBW_BUILD: cp36-win32
-#          DISTUTILS_USE_SDK: 1
-#          MSSdk: 1
 
       - uses: actions/upload-artifact@v3
         with:
-          name: windows-wheels
+          name: windows-wheel
           path: dist/*.whl
 
 
   build-mac:
-    name: Build wheels on ${{ matrix.os }}
+    name: Build macOS Python wheel
     runs-on: macOS-11
     steps:
       - uses: actions/checkout@v3
 
-      # Used to host cibuildwheel
       - uses: actions/setup-python@v3
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.11.2
+        run: python -m pip install cibuildwheel==2.15.0
 
-      - name: Build wheels
+      - name: Build wheel
         run: python -m cibuildwheel --output-dir dist
 
       - uses: actions/upload-artifact@v3
         with:
-          name: mac-wheels
+          name: mac-wheel
           path: dist/*.whl
-  
+
+
   run-tox-test:
     name: Test wheels
     needs: [build-linux, build-mac]
@@ -106,7 +92,7 @@ jobs:
 
       - uses: actions/download-artifact@master
         with:
-          name: mac-wheels
+          name: mac-wheel
           path: dist
 
       - name: Install Python
@@ -121,28 +107,32 @@ jobs:
       - name: Run basic test 
         run: |
 
-          echo ${{ github.workspace }}
-          pwd
           cd misc/
-          #PIP_FIND_LINKS='/home/runner/work/up-fast-downward/up-fast-downward/dist' tox -e unified-planning
           PIP_FIND_LINKS='${{ github.workspace }}/dist' tox -e unified-planning
 
 
   run-tox-test-windows:
     name: Test wheels
     needs: [build-windows]
-    runs-on: windows-2022
+    runs-on: ${{ matrix.version.os }}
+    strategy:
+      matrix:
+        version:
+          - {os: windows-2022, python: '3.8'}
+          - {os: windows-2023, python: '3.10'}
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
 
       - uses: actions/download-artifact@master
         with:
-          name: windows-wheels
+          name: windows-wheel
           path: dist
 
       - name: Install Python
         uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.version.python }}
 
       - name: Install dependencies
         run: |
@@ -152,13 +142,12 @@ jobs:
         run: |
 
           cd misc/
-          echo ${{ github.workspace }}
           $env:PIP_FIND_LINKS='${{ github.workspace }}\dist'; tox -e unified-planning
 
 
 #  deploy-pypi:
 #    runs-on: ubuntu-latest
-#    needs: [build-linux, build-win-and-mac]
+#    needs: [run-tox-test, run-tox-test-windows]
 #    if: github.ref == 'refs/heads/main' # We only deploy on master commits
 #
 #    steps:
@@ -169,12 +158,12 @@ jobs:
 #
 #      - uses: actions/download-artifact@master
 #        with:
-#          name: windows-wheels
+#          name: windows-wheel
 #          path: dist
 #
 #      - uses: actions/download-artifact@master
 #        with:
-#          name: mac-wheels
+#          name: mac-wheel
 #          path: dist
 #
 #      - run: ls dist
