--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,12 @@ on: push
 
 jobs:
   build-linux:
+    name: Build linux Python wheels
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Build manylinux Python wheels
         uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
@@ -17,51 +18,153 @@ jobs:
 
       - uses: actions/upload-artifact@master
         with:
-          name: linux-wheel
+          name: linux-wheels
           path: dist/*-manylinux*.whl
 
-  build-win-and-mac:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macOS-11, windows-2022]
+
+  build-windows:
+    name: Build windows Python wheel
+    runs-on: windows-2022
+    env:
+      CC: cl
+      CXX: cl
+#      CIBW_BUILD_VERBOSITY: 3
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Clone UP Fast Downward repository
+        uses: actions/checkout@v4
 
-      # Used to host cibuildwheel
       - uses: actions/setup-python@v3
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.11.2
+        run: python -m pip install cibuildwheel==2.15.0
 
-      - name: Build wheels
+      - uses: ilammy/msvc-dev-cmd@v1
+
+      - name: Build 64-bit wheel
         run: python -m cibuildwheel --output-dir dist
-        # to supply options, put them in 'env', like:
-        # env:
-        #   CIBW_SOME_OPTION: value
+        env:
+          CIBW_BUILD: cp36-win_amd64
 
       - uses: actions/upload-artifact@v3
         with:
-          name: windows-mac-wheels
+          name: windows-wheel
           path: dist/*.whl
+
+
+  build-mac:
+    name: Build macOS Python wheel
+    runs-on: macOS-11
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v3
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.15.0
+
+      - name: Build wheel
+        run: python -m cibuildwheel --output-dir dist
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: mac-wheel
+          path: dist/*.whl
+
+
+  run-tox-test:
+    name: Test wheels
+    needs: [build-linux, build-mac]
+    runs-on: ${{ matrix.version.os }}
+    strategy:
+      matrix:
+        version:
+          - {os: ubuntu-20.04, python: '3.8'}
+          - {os: ubuntu-22.04, python: '3.10'}
+          - {os: macOS-11, python: '3.10'}
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@master
+        with:
+          name: linux-wheels
+          path: dist
+
+      - uses: actions/download-artifact@master
+        with:
+          name: mac-wheel
+          path: dist
+
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.version.python }}
+
+      - name: Install dependencies
+        run: |
+          pip3 install tox
+
+      - name: Run basic test 
+        run: |
+
+          cd misc/
+          PIP_FIND_LINKS='${{ github.workspace }}/dist' tox -e unified-planning
+
+
+  run-tox-test-windows:
+    name: Test wheels
+    needs: [build-windows]
+    runs-on: ${{ matrix.version.os }}
+    strategy:
+      matrix:
+        version:
+          - {os: windows-2019, python: '3.8'}
+          - {os: windows-2022, python: '3.10'}
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@master
+        with:
+          name: windows-wheel
+          path: dist
+
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.version.python }}
+
+      - name: Install dependencies
+        run: |
+          pip3 install tox
+
+      - name: Run basic test 
+        run: |
+
+          cd misc/
+          $env:PIP_FIND_LINKS='${{ github.workspace }}\dist'; tox -e unified-planning
 
 
   deploy-pypi:
     runs-on: ubuntu-latest
-    needs: [build-linux, build-win-and-mac]
+    needs: [run-tox-test, run-tox-test-windows]
     if: github.ref == 'refs/heads/main' # We only deploy on master commits
 
     steps:
       - uses: actions/download-artifact@master
         with:
-          name: linux-wheel
+          name: linux-wheels
           path: dist
 
       - uses: actions/download-artifact@master
         with:
-          name: windows-mac-wheels
+          name: windows-wheel
+          path: dist
+
+      - uses: actions/download-artifact@master
+        with:
+          name: mac-wheel
           path: dist
 
       - run: ls dist
