--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Build manylinux Python wheels
-        uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
-        with:
-          python-versions: 'cp36-cp36m cp37-cp37m'
+      - uses: actions/setup-python@v5
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.22.0
+
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir wheelhouse
 
       - uses: actions/upload-artifact@master
         with:
-          name: linux-wheels
-          path: dist/*-manylinux*.whl
+          name: linux-wheel
+          path: ./wheelhouse/*.whl
 
 
   build-windows:
@@ -90,7 +93,7 @@ jobs:
 
       - uses: actions/download-artifact@master
         with:
-          name: linux-wheels
+          name: linux-wheel
           path: dist
 
       - uses: actions/download-artifact@master
@@ -156,7 +159,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@master
         with:
-          name: linux-wheels
+          name: linux-wheel
           path: dist
 
       - uses: actions/download-artifact@master
