--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ requires = ["setuptools>=59.6"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.package-data]
-    "" = ['fast_downward.py',
+    "up_fast_downward" = ['fast_downward.py',
         'fast_downward_grounder.py',
         'utils.py',
         'downward/fast-downward.py',
