--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         run: python -m pip install cibuildwheel==2.22.0
 
       - name: Install setuptools
-        run: python -m pip install setuptools=75.3.0
+        run: python -m pip install setuptools==75.3.0
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
