--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,24 +23,32 @@ classifiers = [
 Homepage = "https://github.com/aiplan4eu/up-fast-downward/"
 
 [tool.setuptools]
-py-modules = ["_custom_build"]
+py-modules = ["up_fast_downward._custom_build"]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["up_fast_downward"]  # ["*"] by default
+#find = {} 
+
+[tool.setuptools.package-data]
+up_fast_downward = [
+    'fast_downward.py',
+    'fast_downward_grounder.py',
+    'utils.py',
+    'downward/fast-downward.py',
+    'downward/README.md', 'downward/LICENSE.md',
+    'downward/builds/release/bin/*',
+    'downward/builds/release/bin/translate/*',
+    'downward/builds/release/bin/translate/pddl/*',
+    'downward/builds/release/bin/translate/pddl_parser/*',
+    'downward/driver/*', 'downward/driver/portfolios/*'
+]
 
 [tool.setuptools.cmdclass]
-build_py = "_custom_build.install_fast_downward"
-bdist_wheel = "_custom_build.bdist_wheel"
+build_py = "up_fast_downward._custom_build.install_fast_downward"
+bdist_wheel = "up_fast_downward._custom_build.bdist_wheel"
 
 [build-system]
 requires = ["setuptools>=59.6"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools.package-data]
-    "up_fast_downward" = ['fast_downward.py',
-        'fast_downward_grounder.py',
-        'utils.py',
-        'downward/fast-downward.py',
-        'downward/README.md', 'downward/LICENSE.md',
-        'downward/builds/release/bin/*',
-        'downward/builds/release/bin/translate/*',
-        'downward/builds/release/bin/translate/pddl/*',
-        'downward/builds/release/bin/translate/pddl_parser/*',
-        'downward/driver/*', 'downward/driver/portfolios/*']
