--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,8 @@ jobs:
 
       - uses: actions/setup-python@v5
 
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.22.0
-
-      - name: Install setuptools
-        run: python -m pip install setuptools==75.3.0
+      - name: Install build tools
+        run: python -m pip install --upgrade pip  cibuildwheel==2.22.0 setuptools==75.3.0
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
@@ -49,8 +46,8 @@ jobs:
 
       - name: Build 64-bit wheel
         run: python -m cibuildwheel --output-dir dist
-        env:
-          CIBW_BUILD: cp36-win_amd64
+#        env:
+#          CIBW_BUILD: cp36-win_amd64
 
       - uses: actions/upload-artifact@master
         with:
