--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,31 +132,31 @@ jobs:
           $env:PIP_FIND_LINKS='${{ github.workspace }}\dist'; tox -e unified-planning
 
 
-  deploy-pypi:
-    runs-on: ubuntu-latest
-    needs: [run-tox-test, run-tox-test-windows]
-    if: github.ref == 'refs/heads/main' # We only deploy on master commits
-
-    steps:
-      - uses: actions/download-artifact@master
-        with:
-          name: cibw-wheels-ubuntu-latest
-          path: dist
-
-      - uses: actions/download-artifact@master
-        with:
-          name: cibw-wheels-windows-latest
-          path: dist
-
-      - uses: actions/download-artifact@master
-        with:
-          name: cibw-wheels-macos-13
-          path: dist
-
-      - run: ls dist
-
-      - name: Upload to PyPI
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+#  deploy-pypi:
+#    runs-on: ubuntu-latest
+#    needs: [run-tox-test, run-tox-test-windows]
+#    if: github.ref == 'refs/heads/main' # We only deploy on master commits
+#
+#    steps:
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: cibw-wheels-ubuntu-latest
+#          path: dist
+#
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: cibw-wheels-windows-latest
+#          path: dist
+#
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: cibw-wheels-macos-13
+#          path: dist
+#
+#      - run: ls dist
+#
+#      - name: Upload to PyPI
+#        uses: pypa/gh-action-pypi-publish@master
+#        with:
+#          user: __token__
+#          password: ${{ secrets.PYPI_API_TOKEN }}
