--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.22.0
         env:
-          CIBW_SKIP: '*-musllinux_*'
+          CIBW_BUILD: cp38-win_amd64
 
       - uses: actions/upload-artifact@v4
         with:
