--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,16 +23,38 @@ jobs:
         uses: pypa/cibuildwheel@v2.22.0
         env:
           CIBW_SKIP: '*-musllinux_*'
-          CIBW_ARCHS_MACOS: "x86_64 arm64"
 
       - uses: actions/upload-artifact@v4
         with:
           name: cibw-wheels-${{ matrix.os }}
           path: ./wheelhouse/*.whl
 
-  
+
+  build_wheels_mac_arm64:
+    name: Build wheels on macos-13-arm64 
+    runs-on: macos-13-arm64
+
+    steps:
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-python@v5
+      
+      - name: Install build tools
+        run: python -m pip install --upgrade pip  setuptools==75.3.0
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.22.0
+        env:
+          CIBW_ARCHS_MACOS: "x86_64 arm64"
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: cibw-wheels-macos-13-arm64
+          path: ./wheelhouse/*.whl
+ 
+
   build_wheels_windows:
-    name: Build wheels on ${{ matrix.os }}
+    name: Build wheels on windows-latest
     runs-on: windows-latest
     env:
       CC: cl
@@ -58,28 +80,24 @@ jobs:
           name: cibw-wheels-windows-latest
           path: ./wheelhouse/*.whl
 
+
   run-tox-test:
     name: Test wheels on mac and linux
-    needs: [build_wheels_mac_ubuntu]
+    needs: [build_wheels_mac_ubuntu, build_wheels_mac_arm64]
     runs-on: ${{ matrix.version.os }}
     strategy:
       matrix:
         version:
           - {os: ubuntu-latest, python: '3.10'}
           - {os: macOS-13, python: '3.10'}
-          - {os: macOS-14, python: '3.12'}
+          - {os: macOS-13-arm64, python: '3.12'}
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
 
       - uses: actions/download-artifact@master
         with:
-          name: cibw-wheels-ubuntu-latest
-          path: dist
-
-      - uses: actions/download-artifact@master
-        with:
-          name: cibw-wheels-macos-13
+          name: cibw-wheels-${{ matrix.version.os }}
           path: dist
 
       - name: Install Python
