--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
 
 
   build_wheels_mac_arm64:
-    name: Build wheels on macos-14-arm64 
-    runs-on: macos-14-arm64
+    name: Build wheels on macos-14
+    runs-on: macos-14 # apple silicon
 
     steps:
       - uses: actions/checkout@v4
@@ -44,12 +44,10 @@ jobs:
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.22.0
-        env:
-          CIBW_ARCHS_MACOS: "x86_64 arm64"
 
       - uses: actions/upload-artifact@v4
         with:
-          name: cibw-wheels-macos-14-arm64
+          name: cibw-wheels-macos-14
           path: ./wheelhouse/*.whl
  
 
@@ -90,7 +88,7 @@ jobs:
         version:
           - {os: ubuntu-latest, python: '3.10'}
           - {os: macOS-13, python: '3.10'}
-          - {os: macOS-14-arm64, python: '3.12'}
+          - {os: macOS-14, python: '3.12'}
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
