--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,9 @@ jobs:
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.22.0
+        env:
+          CIBW_BUILD: "arm64"
+          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "" # skip repair step
 
       - uses: actions/upload-artifact@v4
         with:
