--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,8 +89,8 @@ jobs:
       matrix:
         version:
           - {os: ubuntu-latest, python: '3.10'}
-          - {os: macOS-13, python: '3.10'}
-          - {os: macOS-14, python: '3.12'}
+          - {os: macos-13, python: '3.10'}
+          - {os: macos-14, python: '3.12'}
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
