--- a/misc/tox.ini
+++ b/misc/tox.ini
@@ -10,6 +10,6 @@ changedir = {toxinidir}/tests/
 deps =
   pytest
   up-fast-downward
-  unified-planning >= 1.0.0.168.dev1
+  unified-planning >= 1.1.0
 commands =
   pytest test-simple.py
